--- a/style.css
+++ b/style.css
@@ -13,11 +13,8 @@
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-body{
-    padding-bottom: 500px;
-}
+    box-sizing: border-box;}
+
 #event-description{
     background-color: #1C2236;
     background-position: center;
@@ -146,7 +143,7 @@ body{
 #location{
     height: 400px;
     background: linear-gradient(rgba(0,0,0,0.8), rgba(0, 0, 0, 0.8));
-    background-image: url("/img/metaverso.jpg");
+    background-image: url("/img/Metaverso_746x419.jpg");
     background-position: center;
     background-size: cover;
     display: flex;
@@ -171,10 +168,108 @@ body{
 #address-details{
     text-align: center;
     font-size: 1.3em;
+    font-weight: bold;
+    line-height: 2em;
 }
 #about-location h3{
     font-size: 2.5em;
     margin-bottom: 1em;
     text-transform: uppercase;
 
+}
+#about-location p{
+    line-height: 1.7rem;
+    font-size: 1.2em;
+}
+
+/* Event details container */
+#details{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.detail{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 5%;
+    margin-bottom: 4em;
+    color: #1C2236;
+}
+
+.detail img{
+    width: 55%;
+}
+
+.detail h3{
+    margin-bottom: 1em;
+    font-size: 2em;
+    font-weight: 700;
+}
+
+#detail-1 h3{
+    font-size: 3.8em;
+    font-weight: 900;
+
+}
+.detail-description{
+    width: 100%;
+    padding-left: 2em;
+}
+.detail-description ul{
+    list-style-position: inside;
+}
+.detail-description li{
+    margin-bottom: 0.8em;
+}
+.detail-description ul li:last-child{
+    font-weight: bold;
+}
+#cta{
+    height: 400px;
+    background: url("./img/360_F_488886674_k46JuAeeKzGIEK3nwhaCMvnsEDE59NB6.jpg") ;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #E3EEFF;
+}
+
+#cta h3{
+    margin-bottom: 1.2em;
+    font-size: 2em;
+    font-weight: bolder;
+}
+
+#cta .btn{
+         width: 30%;
+         margin: 0 auto;
+         font-weight: 600;
+         font-size: 1.2em;
+}
+#footer{
+    text-align: center;
+    background-color: #1C2236;
+    color: #08AAC7;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#footer h3{
+    font-size: 2.3em;
+    margin-bottom: 1.8em;
+    font-weight: bold;
+}
+
+#footer p:nth-child(2){
+    margin-bottom: 1em;
+    font-size: 1.2em;
+}
+
+#footer span{
+    font-weight: bold;
 }
