--- a/style.css
+++ b/style.css
@@ -273,3 +273,118 @@
 #footer span{
     font-weight: bold;
 }
+
+@media (max-width: 450px){
+
+     /* Event Form */
+     #event-description{
+        
+        flex-direction: column;
+        height: auto;
+     }
+
+     #disclaimer{
+        padding: 2em;
+        max-width: 70%;
+     }
+     #disclaimer h2{
+        margin-bottom: .5em;
+        max-width: 70%;
+     }
+     #subscription-form{
+        max-width: 70%;
+        margin-bottom: 2em;
+     
+     }
+
+     /* Benefits section */
+     .benefits{
+        flex-direction: column;
+        align-items: center;
+        width: auto;
+        padding: 2em;
+     }
+     .benefit{
+        max-width: 60%;
+        margin-bottom: 2em;
+     }
+
+     /* Event location*/
+     #location{
+        flex-direction: column;
+        height: auto;
+        text-align: center;
+        padding: 2em 0;
+        background: #1C2236;
+     }
+     #address{
+        order: 2;
+        flex-direction: column;
+        max-width: 60%;
+     }
+
+     #address i{
+        margin: .3em 0;
+     }
+     #about-location{
+        order: 1;
+        max-width: 80%;
+     }
+     #about-location h3{
+        margin-bottom: 0;
+     }
+     #about-location p{
+        display: none;
+     }
+
+     /* Event details container */
+     .detail{
+        flex-direction: column;
+        margin-bottom: .5em;
+        gap: 0;
+     }
+
+     .detail img{
+        width: 100%;
+        margin: 2em 0;
+     }
+
+     #detail-3 img{
+        display: none;
+     }
+
+     .detail-description{
+        padding: 0;
+     }
+
+     #detail-1, .detail-description{
+        order: 1;
+     }
+     .detail h3{
+        margin-bottom: 1em;
+        font-size: 1em;
+        font-weight: 500;
+    }
+    
+    #detail-1 h3{
+        font-size: 2em;
+        font-weight: 600;
+    
+    }
+
+    /* CTA Section */
+
+    #cta .btn{
+        width: 80%;
+    }
+
+    #cta h3{
+        margin-bottom: 1.2em;
+        font-size: 2em;
+        max-width: 80%;
+        font-weight: bolder;
+        margin-left: 10%;
+    }
+
+    
+}
